frontend/test/should_fail/index_003_incidence_count_index_argument_mismatch_exec.grg
#using "index_model_003.gm"

rule indexaccess {
	n:N -e:E->;
	
	modify {
	---
		exec( { { countFromIndex(foo, e)==42 } } );
	}
}
